Hide diagnostics from the dependent